keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: database
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: keycloak
